--- a/package.json
+++ b/package.json
@@ -40,8 +40,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1"
+    "sass": "^1.55.0"
   }
 }
